WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68576
MiniBrowser fails to launch when double-clicked
https://bugs.webkit.org/show_bug.cgi?id=68576
Summary
MiniBrowser fails to launch when double-clicked
Adam Roben (:aroben)
Reported
2011-09-21 15:25:31 PDT
To reproduce: 1. Double-click MiniBrowser.exe It doesn't launch. It complains about not being able to find CFNetwork.dll.
Attachments
Turn MiniBrowser into a stub .exe launcher and a .dll that contains all the real code
(17.78 KB, patch)
2012-01-04 11:59 PST
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2011-09-21 15:25:57 PDT
<
rdar://problem/10163853
>
Adam Roben (:aroben)
Comment 2
2011-09-21 15:36:14 PDT
It's possible we'll be able to fix this by delay-loading WebKit.dll and setting up the DLL search path before we make any WebKit API calls.
Adam Roben (:aroben)
Comment 3
2011-09-22 09:54:08 PDT
Looks like delay-loading isn't good enough. We're still loading WebKit.dll immediately on launch, which then pulls in CoreFoundation etc.
Adam Roben (:aroben)
Comment 4
2011-09-22 11:48:37 PDT
Since we're going to need a stub launcher for WinLauncher, too (
bug 68578
), maybe we'll come up with a way to share the launcher code. We might be able to share code with WebKitLauncherWin, too.
Adam Roben (:aroben)
Comment 5
2012-01-04 11:59:29 PST
Created
attachment 121133
[details]
Turn MiniBrowser into a stub .exe launcher and a .dll that contains all the real code
Adam Roben (:aroben)
Comment 6
2012-01-05 06:58:32 PST
Committed
r104155
: <
http://trac.webkit.org/changeset/104155
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug