Turn MiniBrowser into a stub .exe launcher and a .dll that contains all the real code

This allows us to add the Apple Application Support directory to PATH before trying to load
WebKit so that CoreGraphics.dll and friends can be found.

Fixes <http://webkit.org/b/68576> <rdar://problem/10163853> MiniBrowser fails to launch when
double-clicked

Reviewed by Anders Carlsson.

Tools:

* MiniBrowser/MiniBrowser.vcproj:
* MiniBrowser/Configurations/MiniBrowserCommon.vsprops:
Changed to build MiniBrowser.dll instead of MiniBrowser.exe.

* MiniBrowser/Configurations/MiniBrowserLauncherCommon.vsprops: Added.
* MiniBrowser/Configurations/MiniBrowserLauncherDebug.vsprops: Added.
* MiniBrowser/Configurations/MiniBrowserLauncherDebugAll.vsprops: Added.
* MiniBrowser/Configurations/MiniBrowserLauncherDebugCairoCFLite.vsprops: Added.
* MiniBrowser/Configurations/MiniBrowserLauncherProduction.vsprops: Added.
* MiniBrowser/Configurations/MiniBrowserLauncherRelease.vsprops: Added.
* MiniBrowser/Configurations/MiniBrowserLauncherReleaseCairoCFLite.vsprops: Added.

* MiniBrowser/MiniBrowserLauncher.vcproj: Copied from Tools/MiniBrowser/MiniBrowser.vcproj
but changed to build the stub launcher.

* MiniBrowser/win/main.cpp: Moved the /manifestdependency code to DLLLauncherMain.cpp, since
it needs to be compiled into the .exe instead of the .dll.
(DllMain): Added. We use this to store the DLL's HINSTANCE.
(dllLauncherEntryPoint): Renamed from _tWinMain. This is what gets called by the
DLLLauncherMain code.

* win/DLLLauncher/DLLLauncherMain.cpp: Moved the /manifestdependency code from MiniBrowser
to here.

Source/WebKit/win:

Add MiniBrowserLauncher to WebKit.sln

It builds just after MiniBrowser.

* WebKit.vcproj/WebKit.sln: Added MiniBrowserLauncher.

Canonical link: https://commits.webkit.org/92401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104155 268f45cc-cd09-0410-ab3c-d52691b4dbfc